[gd_scene load_steps=11 format=3 uid="uid://ciftruqevokio"]

[ext_resource type="Script" path="res://Objects/horse.gd" id="1_h0507"]
[ext_resource type="Texture2D" uid="uid://cn376hl265a35" path="res://Assets/Art/gunhorse.png" id="2_v77gu"]
[ext_resource type="Script" path="res://Objects/physics_component.gd" id="3_20w1y"]
[ext_resource type="Script" path="res://Objects/movement_component.gd" id="4_dehjl"]
[ext_resource type="Script" path="res://Objects/jump_component.gd" id="5_n872g"]
[ext_resource type="Script" path="res://Objects/shoothorse.gd" id="6_eqxn4"]
[ext_resource type="AudioStream" uid="uid://b20kputsflph8" path="res://Assets/Sounds/click.wav" id="7_4kaj3"]
[ext_resource type="AudioStream" uid="uid://w20eypaklpmf" path="res://Assets/Sounds/laserShoot.wav" id="7_f7gng"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cis7"]
size = Vector2(48, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kqq1"]
size = Vector2(46, 12)

[node name="gunHorse" type="CharacterBody2D" node_paths=PackedStringArray("horse_action")]
z_index = 1
collision_layer = 4
script = ExtResource("1_h0507")
horse_action = NodePath("SHOOTHORSE")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0cis7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("2_v77gu")
hframes = 2

[node name="Saddle" type="Area2D" parent="."]
position = Vector2(0, -22)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Saddle"]
shape = SubResource("RectangleShape2D_5kqq1")

[node name="PhysicsComponent" type="Node" parent="."]
script = ExtResource("3_20w1y")
max_fall = 550.0

[node name="RiderOffset" type="Node2D" parent="."]
position = Vector2(0, -26)

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_dehjl")
max_speed = 350.0

[node name="JumpComponent" type="Node" parent="."]
script = ExtResource("5_n872g")
action = "horse"
floatiness = 1.4

[node name="SHOOTHORSE" type="Node" parent="."]
script = ExtResource("6_eqxn4")
offset = Vector2(58, 0)

[node name="ShootSFX" type="AudioStreamPlayer" parent="SHOOTHORSE"]
stream = ExtResource("7_f7gng")
pitch_scale = 1.43

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Catch_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4kaj3")

[connection signal="body_entered" from="Saddle" to="." method="_on_saddle_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
